--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
