--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
 
         <!-- Javascript at end of body for optimized loading -->
         <script type="text/javascript" src="js/materialize.min.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
