--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="nav-wrapper">
                         <div class="row">
                             <div class="col s12 m10 offset-m1">
-                                <h1 class="header">Sidenav</h1>
+                                <h1 class="header">Sidenav</h1><a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                             </div>
                         </div>
                     </div>
@@ -39,7 +39,6 @@
                 <a href="#" class="waves-effect waves-teal">Page 4</a>
             </li>
         </ul>
-        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
         <!-- Javascript at end of body for optimized loading -->
         <script type="text/javascript" src="js/materialize.min.js"></script>
