--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                     <div class="nav-wrapper">
                         <div class="row">
                             <div class="col s12 m10 offset-m1">
-                                <h1 class="header">Sidenav</h1><a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                                <h1 class="header">Sidenav</h1>
+                                <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                             </div>
                         </div>
                     </div>
