--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <!-- Google Icon Font -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!-- Materialize CSS -->
-        <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="css/main.css" media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
         <!-- Optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -42,11 +42,8 @@
         <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
         <!-- Javascript at end of body for optimized loading -->
-        <script type="text/javascript" src="js/materialize.min.js"></script>
-        <script
-            src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-            crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="js/materialize.min.js"></script>
     </body>
 </html>
