--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
             <nav class="top-nav">
                 <div class="container">
                     <div class="nav-wrapper">
-                        <div class="row">
-                            <div class="col s12 m10 offset-m1">
-                                <h1 class="header">Sidenav</h1>
-                                <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                            </div>
-                        </div>
+                        <a href="#!" class="brand-logo">Logo</a>
+                        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     </div>
                 </div>
             </nav>
