--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
                 <a href="#" class="waves-effect waves-teal">Page 4</a>
             </li>
         </ul>
+        <div class="parallax-container">
+            <div class="parallax">
+                <img src="#">
+            </div>
+        </div>
+        <div class="section white">
+            <div class="row container">
+                <h2>Parallax</h2>
+                <p class="grey-text text-darken-3 lighten-3">This is some text</p>
+            </div>
+        </div>
+        <div class="parallax-container">
+            <div class="parallax">
+                <img src="#!">
+            </div>
+        </div>
+
 
         <!-- Javascript at end of body for optimized loading -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
