--- a/index.html
+++ b/index.html
@@ -36,22 +36,24 @@
                 <a href="#" class="waves-effect waves-teal">Page 4</a>
             </li>
         </ul>
-        <div class="parallax-container">
-            <div class="parallax">
-                <img src="#">
+        <main>
+            <div class="parallax-container">
+                <div class="parallax">
+                    <img src="#">
+                </div>
             </div>
-        </div>
-        <div class="section white">
-            <div class="row container">
-                <h2>Parallax</h2>
-                <p class="grey-text text-darken-3 lighten-3">This is some text</p>
+            <div class="section white">
+                <div class="row container">
+                    <h2>Parallax</h2>
+                    <p class="grey-text text-darken-3 lighten-3">This is some text</p>
+                </div>
             </div>
-        </div>
-        <div class="parallax-container">
-            <div class="parallax">
-                <img src="#!">
+            <div class="parallax-container">
+                <div class="parallax">
+                    <img src="#!">
+                </div>
             </div>
-        </div>
+        </main>
 
 
         <!-- Javascript at end of body for optimized loading -->
