Images and expansion on landing page

--- a/index.html
+++ b/index.html
@@ -39,18 +39,24 @@
         <main>
             <div class="parallax-container">
                 <div class="parallax">
-                    <img src="#">
+                    <img src="images/main-image.jpg">
                 </div>
             </div>
             <div class="section white">
                 <div class="row container">
-                    <h2>Parallax</h2>
+                    <h2>Gaming</h2>
                     <p class="grey-text text-darken-3 lighten-3">This is some text</p>
                 </div>
             </div>
             <div class="parallax-container">
                 <div class="parallax">
-                    <img src="#!">
+                    <img src="images/design.jpg">
+                </div>
+            </div>
+            <div class="section white">
+                <div class="row container">
+                    <h2>Design</h2>
+                    <p class="grey-text text-darken-3 lighten-3">This is some more text</p>
                 </div>
             </div>
         </main>
