--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="section white">
                 <div class="row container">
                     <h2>Gaming</h2>
-                    <p class="grey-text text-darken-3 lighten-3">This is some text</p>
+                    <p class="grey-text text-darken-3 lighten-3">All types of games garner my interest. Whether it be an arcade, casino, console or mobile. </p>
                 </div>
             </div>
             <div class="parallax-container">
@@ -56,7 +56,8 @@
             <div class="section white">
                 <div class="row container">
                     <h2>Design</h2>
-                    <p class="grey-text text-darken-3 lighten-3">This is some more text</p>
+                    <p class="grey-text text-darken-3 lighten-3">Design has always been a passion of mine, starting with web design. All creations are beautiful,
+                         we just have to know where to look.</p>
                 </div>
             </div>
         </main>
