--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="top-nav">
                 <div class="container">
                     <div class="nav-wrapper">
-                        <a href="#!" class="brand-logo">Logo</a>
+                        <a href="#!" class="brand-logo center">Logo</a>
                         <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     </div>
                 </div>
