--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     </head>
     <body>
         <header>
-            <nav class="top-nav">
+            <nav class="top-nav transparent">
                 <div class="container">
                     <div class="nav-wrapper">
-                        <a href="#!" class="brand-logo center">Logo</a>
-                        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                        <a href="#!" class="brand-logo center grey">Logo</a>
+                        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons grey">menu</i></a>
                     </div>
                 </div>
             </nav>
