--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <nav class="top-nav transparent">
                 <div class="container">
                     <div class="nav-wrapper">
-                        <a href="#!" class="brand-logo center grey">Logo</a>
-                        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons grey">menu</i></a>
+                        <a href="#!" class="brand-logo center grey-text">Logo</a>
+                        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons grey-text">menu</i></a>
                     </div>
                 </div>
             </nav>
