--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <nav class="top-nav transparent">
+            <nav class="top-nav grey darken-3">
                 <div class="container">
                     <div class="nav-wrapper">
                         <a href="#!" class="brand-logo center grey-text">Logo</a>
@@ -22,7 +22,7 @@
                 </div>
             </nav>
         </header>
-        <ul id="slide-out" class="sidenav sidenav-fixed">
+        <ul id="slide-out" class="sidenav sidenav-fixed transparent">
             <li class="bold">
                 <a href="#" class="waves-effect waves-teal">Page 1</a>
             </li>
