--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <nav class="top-nav grey darken-3">
                 <div class="container">
                     <div class="nav-wrapper">
-                        <a href="#!" class="brand-logo center grey-text">Logo</a>
-                        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons grey-text">menu</i></a>
+                        <a href="#!" class="brand-logo center grey-text text-lighten-2">Logo</a>
+                        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons grey-text text-lighten-2">menu</i></a>
                     </div>
                 </div>
             </nav>
         </header>
-        <ul id="slide-out" class="sidenav sidenav-fixed transparent">
+        <ul id="slide-out" class="sidenav sidenav-fixed grey darken-3 grey-text text-lighten-2">
             <li class="bold">
                 <a href="#" class="waves-effect waves-teal">Page 1</a>
             </li>
