--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
                 </div>
             </nav>
         </header>
-        <ul id="slide-out" class="sidenav sidenav-fixed grey darken-3 grey-text text-lighten-2">
+        <ul id="slide-out" class="sidenav sidenav-fixed grey darken-3">
             <li class="bold">
-                <a href="#" class="waves-effect waves-teal">Page 1</a>
+                <a href="#" class="waves-effect waves-teal grey-text text-lighten-2">Page 1</a>
             </li>
             <li class="bold">
-                <a href="#" class="waves-effect waves-teal">Page 2</a>
+                <a href="#" class="waves-effect waves-teal grey-text text-lighten-2">Page 2</a>
             </li>
             <li class="bold">
-                <a href="#" class="waves-effect waves-teal">Page 3</a>
+                <a href="#" class="waves-effect waves-teal grey-text text-lighten-2">Page 3</a>
             </li>
             <li class="bold">
-                <a href="#" class="waves-effect waves-teal">Page 4</a>
+                <a href="#" class="waves-effect waves-teal grey-text text-lighten-2">Page 4</a>
             </li>
         </ul>
         <main>
@@ -42,10 +42,10 @@
                     <img src="images/main-image.jpg">
                 </div>
             </div>
-            <div class="section white">
+            <div class="section grey darken-3">
                 <div class="row container">
                     <h2>Gaming</h2>
-                    <p class="grey-text text-darken-3 lighten-3">All types of games garner my interest. Whether it be an arcade, casino, console or mobile. </p>
+                    <p class="grey-text text-lighten-2">All types of games garner my interest. Whether it be an arcade, casino, console or mobile. </p>
                 </div>
             </div>
             <div class="parallax-container">
@@ -53,10 +53,10 @@
                     <img src="images/design.jpg">
                 </div>
             </div>
-            <div class="section white">
+            <div class="section grey darken-3">
                 <div class="row container">
                     <h2>Design</h2>
-                    <p class="grey-text text-darken-3 lighten-3">Design has always been a passion of mine, starting with web design. All creations are beautiful,
+                    <p class="grey-text text-lighten-2">Design has always been a passion of mine, starting with web design. All creations are beautiful,
                          we just have to know where to look.</p>
                 </div>
             </div>
