--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="section grey darken-3">
                 <div class="row container">
-                    <h2>Gaming</h2>
+                    <h2 class="grey-text text-lighten-2">Gaming</h2>
                     <p class="grey-text text-lighten-2">All types of games garner my interest. Whether it be an arcade, casino, console or mobile. </p>
                 </div>
             </div>
@@ -55,7 +55,7 @@
             </div>
             <div class="section grey darken-3">
                 <div class="row container">
-                    <h2>Design</h2>
+                    <h2 class="grey-text text-lighten-2">Design</h2>
                     <p class="grey-text text-lighten-2">Design has always been a passion of mine, starting with web design. All creations are beautiful,
                          we just have to know where to look.</p>
                 </div>
