--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <nav class="top-nav grey darken-3">
+            <nav class="top-nav grey darken-3 z-depth-5">
                 <div class="container">
                     <div class="nav-wrapper">
                         <a href="#!" class="brand-logo center grey-text text-lighten-2">Logo</a>
@@ -42,7 +42,7 @@
                     <img src="images/main-image.jpg">
                 </div>
             </div>
-            <div class="section grey darken-3">
+            <div class="section grey darken-3 z-depth-3">
                 <div class="row container">
                     <h2 class="grey-text text-lighten-2">Gaming</h2>
                     <p class="grey-text text-lighten-2">All types of games garner my interest. Whether it be an arcade, casino, console or mobile. </p>
@@ -53,7 +53,7 @@
                     <img src="images/design.jpg">
                 </div>
             </div>
-            <div class="section grey darken-3">
+            <div class="section grey darken-3 z-depth-3">
                 <div class="row container">
                     <h2 class="grey-text text-lighten-2">Design</h2>
                     <p class="grey-text text-lighten-2">Design has always been a passion of mine, starting with web design. All creations are beautiful,
