--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
             </nav>
         </header>
-        <ul id="slide-out" class="sidenav sidenav-fixed grey darken-3">
+        <ul id="slide-out" class="sidenav sidenav-fixed grey darken-3 z-depth-5">
             <li class="bold">
                 <a href="#" class="waves-effect waves-teal grey-text text-lighten-2">Page 1</a>
             </li>
@@ -42,7 +42,7 @@
                     <img src="images/main-image.jpg">
                 </div>
             </div>
-            <div class="section grey darken-3 z-depth-3">
+            <div class="section grey darken-3 z-depth-5">
                 <div class="row container">
                     <h2 class="grey-text text-lighten-2">Gaming</h2>
                     <p class="grey-text text-lighten-2">All types of games garner my interest. Whether it be an arcade, casino, console or mobile. </p>
@@ -53,7 +53,7 @@
                     <img src="images/design.jpg">
                 </div>
             </div>
-            <div class="section grey darken-3 z-depth-3">
+            <div class="section grey darken-3 z-depth-5">
                 <div class="row container">
                     <h2 class="grey-text text-lighten-2">Design</h2>
                     <p class="grey-text text-lighten-2">Design has always been a passion of mine, starting with web design. All creations are beautiful,
