--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@
             <nav class="top-nav grey darken-3 z-depth-5">
                 <div class="container">
                     <div class="nav-wrapper">
-                        <a href="#!" class="brand-logo center grey-text text-lighten-2">Jeremy Dixon</a>
+                        <a href="#!" class="brand-logo center grey-text text-lighten-2">About Me</a>
                         <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons grey-text text-lighten-2">menu</i></a>
                     </div>
                 </div>
@@ -24,10 +24,10 @@
         </header>
         <ul id="slide-out" class="sidenav sidenav-fixed grey darken-3 z-depth-5">
             <li class="bold">
-                <a href="index.html" class="waves-effect waves-teal grey-text text-lighten-2">Home</a>
+                <a href="../index.html" class="waves-effect waves-teal grey-text text-lighten-4">Home</a>
             </li>
             <li class="bold">
-                <a href="pages/about.html" class="waves-effect waves-teal grey-text text-lighten-4">About</a>
+                <a href="about.html" class="waves-effect waves-teal grey-text text-lighten-2">About</a>
             </li>
             <li class="bold">
                 <a href="#" class="waves-effect waves-teal grey-text text-lighten-4">Page 3</a>
