--- a/pages/about.html
+++ b/pages/about.html
@@ -27,7 +27,7 @@
                 <a href="../index.html" class="waves-effect waves-teal grey-text text-lighten-4">Home</a>
             </li>
             <li class="bold">
-                <a href="about.html" class="waves-effect waves-teal grey-text text-lighten-2">About</a>
+                <a href="about.html" class="waves-effect waves-teal grey-text text-lighten-4 active">About</a>
             </li>
             <li class="bold">
                 <a href="#" class="waves-effect waves-teal grey-text text-lighten-4">Page 3</a>
@@ -37,29 +37,7 @@
             </li>
         </ul>
         <main>
-            <div class="parallax-container">
-                <div class="parallax">
-                    <img src="images/main-image.jpg">
-                </div>
-            </div>
-            <div class="section grey darken-3 z-depth-5">
-                <div class="row container">
-                    <h2 class="grey-text text-lighten-2">Gaming</h2>
-                    <p class="grey-text text-lighten-2">All types of games garner my interest. Whether it be an arcade, casino, console or mobile. </p>
-                </div>
-            </div>
-            <div class="parallax-container">
-                <div class="parallax">
-                    <img src="images/design.jpg">
-                </div>
-            </div>
-            <div class="section grey darken-3 z-depth-5">
-                <div class="row container">
-                    <h2 class="grey-text text-lighten-2">Design</h2>
-                    <p class="grey-text text-lighten-2">Design has always been a passion of mine, starting with web design. All creations are beautiful,
-                         we just have to know where to look.</p>
-                </div>
-            </div>
+            
         </main>
 
 
