--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             <nav class="top-nav grey darken-3 z-depth-5">
                 <div class="container">
                     <div class="nav-wrapper">
-                        <a href="#!" class="brand-logo center grey-text text-lighten-2">Jeremy Dixon</a>
-                        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons grey-text text-lighten-2">menu</i></a>
+                        <a href="#!" class="brand-logo center grey-text text-lighten-4">Jeremy Dixon</a>
+                        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons grey-text text-lighten-4">menu</i></a>
                     </div>
                 </div>
             </nav>
         </header>
         <ul id="slide-out" class="sidenav sidenav-fixed grey darken-3 z-depth-5">
             <li class="bold">
-                <a href="index.html" class="waves-effect waves-teal grey-text text-lighten-2">Home</a>
+                <a href="index.html" class="waves-effect waves-teal grey-text text-lighten-4 active">Home</a>
             </li>
             <li class="bold">
                 <a href="pages/about.html" class="waves-effect waves-teal grey-text text-lighten-4">About</a>
@@ -44,8 +44,8 @@
             </div>
             <div class="section grey darken-3 z-depth-5">
                 <div class="row container">
-                    <h2 class="grey-text text-lighten-2">Gaming</h2>
-                    <p class="grey-text text-lighten-2">All types of games garner my interest. Whether it be an arcade, casino, console or mobile. </p>
+                    <h2 class="grey-text text-lighten-4">Gaming</h2>
+                    <p class="grey-text text-lighten-4">All types of games garner my interest. Whether it be an arcade, casino, console or mobile. </p>
                 </div>
             </div>
             <div class="parallax-container">
@@ -55,8 +55,8 @@
             </div>
             <div class="section grey darken-3 z-depth-5">
                 <div class="row container">
-                    <h2 class="grey-text text-lighten-2">Design</h2>
-                    <p class="grey-text text-lighten-2">Design has always been a passion of mine, starting with web design. All creations are beautiful,
+                    <h2 class="grey-text text-lighten-4">Design</h2>
+                    <p class="grey-text text-lighten-4">Design has always been a passion of mine, starting with web design. All creations are beautiful,
                          we just have to know where to look.</p>
                 </div>
             </div>
