--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </nav>
         </header>
         <ul id="slide-out" class="sidenav sidenav-fixed grey darken-3 z-depth-5">
-            <li class="bold">
-                <a href="index.html" class="waves-effect waves-teal grey-text text-lighten-4 active">Home</a>
+            <li class="bold active">
+                <a href="index.html" class="waves-effect waves-teal grey-text text-lighten-4">Home</a>
             </li>
             <li class="bold">
                 <a href="pages/about.html" class="waves-effect waves-teal grey-text text-lighten-4">About</a>
