--- a/pages/about.html
+++ b/pages/about.html
@@ -6,8 +6,8 @@
         <!-- Google Icon Font -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!-- Materialize CSS -->
-        <link type="text/css" rel="stylesheet" href="css/main.css" media="screen,projection"/>
-        <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="../css/main.css" media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection"/>
         <!-- Optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -26,7 +26,7 @@
             <li class="bold">
                 <a href="../index.html" class="waves-effect waves-teal grey-text text-lighten-4">Home</a>
             </li>
-            <li class="bold">
+            <li class="bold active">
                 <a href="about.html" class="waves-effect waves-teal grey-text text-lighten-4 active">About</a>
             </li>
             <li class="bold">
@@ -37,13 +37,13 @@
             </li>
         </ul>
         <main>
-            
+
         </main>
 
 
         <!-- Javascript at end of body for optimized loading -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
-        <script type="text/javascript" src="js/materialize.min.js"></script>
+        <script type="text/javascript" src="../js/main.js"></script>
+        <script type="text/javascript" src="../js/materialize.min.js"></script>
     </body>
 </html>
