More changes to colors

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </nav>
         </header>
         <ul id="slide-out" class="sidenav sidenav-fixed grey darken-3 z-depth-5">
-            <li class="bold active">
+            <li class="active bold">
                 <a href="index.html" class="waves-effect waves-teal grey-text text-lighten-4">Home</a>
             </li>
             <li class="bold">
