--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@
             <li class="bold">
                 <a href="../index.html" class="waves-effect waves-teal grey-text text-lighten-4">Home</a>
             </li>
-            <li class="bold active">
+            <li class="active bold">
                 <a href="about.html" class="waves-effect waves-teal grey-text text-lighten-4 active">About</a>
             </li>
             <li class="bold">
