Removed waves effect
Was causing issues with the hover effect when selecting an option.

--- a/pages/about.html
+++ b/pages/about.html
@@ -24,16 +24,16 @@
         </header>
         <ul id="slide-out" class="sidenav sidenav-fixed grey darken-3 z-depth-5">
             <li class="bold">
-                <a href="../index.html" class="waves-effect waves-cyan lighten-3 grey-text text-lighten-4">Home</a>
+                <a href="../index.html" class="grey-text text-lighten-4">Home</a>
             </li>
             <li class="active bold">
-                <a href="about.html" class="waves-effect waves-cyan lighten-3 grey-text text-lighten-4 active">About</a>
+                <a href="about.html" class="grey-text text-lighten-4 active">About</a>
             </li>
             <li class="bold">
-                <a href="#" class="waves-effect waves-cyan lighten-3 grey-text text-lighten-4">Page 3</a>
+                <a href="#" class="grey-text text-lighten-4">Page 3</a>
             </li>
             <li class="bold">
-                <a href="#" class="waves-effect waves-cyan lighten-3 grey-text text-lighten-4">Page 4</a>
+                <a href="#" class="grey-text text-lighten-4">Page 4</a>
             </li>
         </ul>
         <main>
