--- a/pages/about.html
+++ b/pages/about.html
@@ -37,7 +37,13 @@
             </li>
         </ul>
         <main>
-
+            <div class="container">
+                <div class="carousel carousel-slider">
+                    <a class="carousel-item" href="#one"><img src="../images/Me1.jpg"></a>
+                    <a class="carousel-item" href="#one"><img src="../images/Me2.jpg"></a>
+                    <a class="carousel-item" href="#one"><img src="../images/Dan.jpg"></a>
+                </div>
+            </div>
         </main>
 
 
