--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@
             <nav class="top-nav grey darken-3 z-depth-5">
                 <div class="container">
                     <div class="nav-wrapper">
-                        <a href="#!" class="brand-logo center grey-text text-lighten-2">About Me</a>
+                        <a href="#!" class="brand-logo center grey-text text-lighten-2">About</a>
                         <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons grey-text text-lighten-2">menu</i></a>
                     </div>
                 </div>
@@ -38,10 +38,10 @@
         </ul>
         <main>
             <div class="container">
-                <div class="carousel carousel-slider">
-                    <a class="carousel-item" href="#one"><img src="../images/Me1.jpg"></a>
-                    <a class="carousel-item" href="#one"><img src="../images/Me2.jpg"></a>
-                    <a class="carousel-item" href="#one"><img src="../images/Dan.jpg"></a>
+                <div class="row">
+                    <div class="col s12">
+                        <img class="responsive-img" src="../images/Me1.jpg">
+                    </div>
                 </div>
             </div>
         </main>
