--- a/pages/about.html
+++ b/pages/about.html
@@ -40,7 +40,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col s12">
-                        <img class="responsive-img" src="../images/Me1.jpg">
+                        <img class="responsive-img circle" src="../images/Me1.jpg">
+                    </div>
+                    <div class="col s12">
+                        <img class="responsive-img circle" src="../images/Me2.jpg">
+                    </div>
+                    <div class="col s12">
+                        <img class="responsive-img circle" src="../images/Dan.jpg">
                     </div>
                 </div>
             </div>
