--- a/pages/about.html
+++ b/pages/about.html
@@ -39,13 +39,13 @@
         <main>
             <div class="container">
                 <div class="row">
-                    <div class="col s12">
+                    <div class="col s12 m4">
                         <img class="responsive-img circle" src="../images/Me1.jpg">
                     </div>
-                    <div class="col s12">
+                    <div class="col s12 m4">
                         <img class="responsive-img circle" src="../images/Me2.jpg">
                     </div>
-                    <div class="col s12">
+                    <div class="col s12 m4">
                         <img class="responsive-img circle" src="../images/Dan.jpg">
                     </div>
                 </div>
