--- a/pages/about.html
+++ b/pages/about.html
@@ -36,14 +36,14 @@
                 <a href="#" class="grey-text text-lighten-4">Page 4</a>
             </li>
         </ul>
-        <main>
+        <main class="about-page">
             <div class="container">
                 <div class="row">
                     <div class="col s12 m4">
                         <img class="responsive-img circle" src="../images/Me1.jpg">
                     </div>
                     <div class="col s12 m4">
-                        <img class="responsive-img circle" src="../images/Me2.jpg">
+                        <img class="responsive-img circle" src="../images/Chey.jpg">
                     </div>
                     <div class="col s12 m4">
                         <img class="responsive-img circle" src="../images/Dan.jpg">
