--- a/pages/about.html
+++ b/pages/about.html
@@ -43,7 +43,7 @@
                         <img class="responsive-img circle" src="../images/Me1.jpg">
                     </div>
                     <div class="col s12 m6">
-                        <img class="responsive-img circle" width="270.55" height="270.55" src="../images/Chey.jpg">
+                        <img class="responsive-img circle" src="../images/Chey.jpg">
                     </div>
                     <div class="col s12 m6">
                         <img class="responsive-img circle" src="../images/Dan.jpg">
