--- a/pages/about.html
+++ b/pages/about.html
@@ -46,7 +46,7 @@
                         <img class="responsive-img circle" src="../images/Chey.jpg">
                     </div>
                     <div class="col s12 m6">
-                        <img class="responsive-img circle" src="../images/Dan.jpg">
+                        <img class="responsive-img circle center" src="../images/Dan.jpg">
                     </div>
                 </div>
             </div>
