--- a/pages/about.html
+++ b/pages/about.html
@@ -40,14 +40,23 @@
             <div class="container">
                 <div class="row">
                     <div class="col s12 m6">
-                        <img class="responsive-img circle" src="../images/Me1.jpg">
+                        <a class="waves-effect waves-light btn modal-trigger" href="jeremy-modal"><img class="responsive-img circle" src="../images/Me1.jpg"></a>
                     </div>
                     <div class="col s12 m6">
                         <img class="responsive-img circle" src="../images/Chey.jpg">
                     </div>
                     <div class="col s12 m6">
-                        <img class="responsive-img circle center" src="../images/Dan.jpg">
+                        <img class="responsive-img circle" src="../images/Dan.jpg">
                     </div>
+                </div>
+            </div>
+            <div id="jeremy-modal" class="modal bottom-sheet">
+                <div class="modal-content">
+                    <h4>Jeremy Dixon</h4>
+                    <p class="flow-text">Hey, that's me! I'm Jeremy. I love everything electronics - phones, computers, consoles. You name it I've probably taken it apart to see how it works. I currently work full
+                        time overnight shifts at a Chevron gas station while I finish my degree at Full Sail University. I'm not a very outgoing person, but I can have my moments. I enjoy all kinds of development
+                        from web all the way to C++, it really just depends on what mood im currently in for what projects I want to take on at the time. 
+                    </p>
                 </div>
             </div>
         </main>
