--- a/pages/about.html
+++ b/pages/about.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col s12 m6">
-                        <a class="waves-effect waves-light modal-trigger" href="jeremy-modal"><img class="responsive-img circle" src="../images/Me1.jpg"></a>
+                        <a class="waves-effect waves-light modal-trigger" href="#jeremy-modal"><img class="responsive-img circle" src="../images/Me1.jpg"></a>
                     </div>
                     <div class="col s12 m6">
                         <img class="responsive-img circle" src="../images/Chey.jpg">
