--- a/pages/about.html
+++ b/pages/about.html
@@ -43,10 +43,10 @@
                         <a class="waves-effect waves-light modal-trigger" href="#jeremy-modal"><img class="responsive-img circle" src="../images/Me1.jpg"></a>
                     </div>
                     <div class="col s12 m6">
-                        <img class="responsive-img circle" src="../images/Chey.jpg">
+                        <a class="waves-effect waves-light modal-trigger" href="#chey-modal"></a><img class="responsive-img circle" src="../images/Chey.jpg"></a>
                     </div>
                     <div class="col s12 m6">
-                        <img class="responsive-img circle" src="../images/Dan.jpg">
+                        <a class="waves-effect waves-light modal-trigger" href="#dan-modal"></a><img class="responsive-img circle" src="../images/Dan.jpg"></a>
                     </div>
                 </div>
             </div>
@@ -56,6 +56,28 @@
                     <p class="flow-text">Hey, that's me! I'm Jeremy. I love everything electronics - phones, computers, consoles. You name it I've probably taken it apart to see how it works. I currently work full
                         time overnight shifts at a Chevron gas station while I finish my degree at Full Sail University. I'm not a very outgoing person, but I can have my moments. I enjoy all kinds of development
                         from web all the way to C++, it really just depends on what mood im currently in for what projects I want to take on at the time. 
+                    </p>
+                </div>
+            </div>
+            <div id="chey-modal" class="modal bottom-sheet">
+                <div class="modal-content">
+                    <h4>Cheyenna</h4>
+                    <p class="flow-text"> While she doesn't work in the same field, she's an inspiration to me in every way possible. She has had her struggles but always found the strength to power through and find the 
+                        light at the end of the tunnel. If it weren't for her, I wouldn't have applied for school and have the goals and aspirations that I have. A pure and beautiful soul that can always find a way to 
+                        surprise me and make my worst days some of the best. She's shown me how to enjoy my life again, instead of constantly working my life away.
+                        
+                        I'm glad to have someone like her close to me on my worst days, and look forward to the future years of friendship that we have together. 
+                    </p>
+                </div>
+            </div>
+            <div id="dan-modal" class="modal bottom-sheet">
+                <div class="modal-content">
+                    <h4>Jeremy Dixon</h4>
+                    <p class="flow-text"> That's Cheyenna's doggo, Lieutenant Dan We ended up adpoting him together when we were looking around at shelters. It was a few days before Christmas and he immediately made our lives better.
+                        He's a pain in the ass and has gotten into the habit of nipping at people's ankles, but he's pretty cool when you get to know him. The best cuddle buddy when it's time to get into bed, since under the covers is 
+                        one of his favroite spots. Even though he's missing a leg, he can probably still outrun any dog on the block - and beat them up as well. 
+
+                        He's a tough cookie. 
                     </p>
                 </div>
             </div>
