--- a/pages/about.html
+++ b/pages/about.html
@@ -43,10 +43,10 @@
                         <a class="waves-effect waves-light modal-trigger" href="#jeremy-modal"><img class="responsive-img circle" src="../images/Me1.jpg"></a>
                     </div>
                     <div class="col s12 m6">
-                        <a class="waves-effect waves-light modal-trigger" href="#chey-modal"></a><img class="responsive-img circle" src="../images/Chey.jpg"></a>
+                        <a class="waves-effect waves-light modal-trigger" href="#chey-modal"><img class="responsive-img circle" src="../images/Chey.jpg"></a>
                     </div>
                     <div class="col s12 m6">
-                        <a class="waves-effect waves-light modal-trigger" href="#dan-modal"></a><img class="responsive-img circle" src="../images/Dan.jpg"></a>
+                        <a class="waves-effect waves-light modal-trigger" href="#dan-modal"><img class="responsive-img circle" src="../images/Dan.jpg"></a>
                     </div>
                 </div>
             </div>
