--- a/pages/about.html
+++ b/pages/about.html
@@ -72,7 +72,7 @@
             </div>
             <div id="dan-modal" class="modal bottom-sheet">
                 <div class="modal-content">
-                    <h4>Jeremy Dixon</h4>
+                    <h4>Lieutenant Dan</h4>
                     <p class="flow-text"> That's Cheyenna's doggo, Lieutenant Dan We ended up adpoting him together when we were looking around at shelters. It was a few days before Christmas and he immediately made our lives better.
                         He's a pain in the ass and has gotten into the habit of nipping at people's ankles, but he's pretty cool when you get to know him. The best cuddle buddy when it's time to get into bed, since under the covers is 
                         one of his favroite spots. Even though he's missing a leg, he can probably still outrun any dog on the block - and beat them up as well. 
